Support "bearcaps" URIs and add some more sanity checks